--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>Azienda Agricola Moretti</title>
   <meta name="description" content="Hub contatti - Azienda Agricola Moretti" />
+
   <link rel="canonical" href="https://azienda-agricola-moretti.github.io/azienda-agricola-moretti/" />
 
   <meta property="og:type" content="website" />
@@ -16,8 +17,9 @@
   <meta property="og:image" content="https://azienda-agricola-moretti.github.io/azienda-agricola-moretti/og.jpg" />
 
   <meta name="theme-color" content="#2C1C14" />
+  <meta name="referrer" content="no-referrer" />
 
-  <!-- Best-effort security policy for static hosting -->
+  <!-- Best-effort CSP for static hosting (GitHub Pages) -->
   <meta http-equiv="Content-Security-Policy"
     content="
       default-src 'self';
@@ -25,14 +27,13 @@
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
       font-src https://fonts.gstatic.com;
       script-src 'self' 'unsafe-inline';
-      frame-src https://www.youtube-nocookie.com https://www.youtube.com;
+      frame-src https://www.youtube.com https://www.youtube-nocookie.com;
+      child-src https://www.youtube.com https://www.youtube-nocookie.com;
       connect-src 'self';
       base-uri 'self';
       form-action 'self';
       upgrade-insecure-requests;
     ">
-
-  <meta name="referrer" content="no-referrer" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,30 +42,34 @@
   <style>
     :root{
       --brand:#2C1C14;
+
       --bg:#FFFFFF;
       --ivory:#FBF8F5;
+
       --text:#0B1220;
       --muted: rgba(78,74,69,.84);
+
       --shadow: 0 14px 34px rgba(11,18,32,.08);
       --shadow2: 0 10px 22px rgba(11,18,32,.08);
       --radius:24px;
+
       --focus: rgba(44,28,20,.18);
 
-      /* scale coerente */
-      --s8:8px; --s12:12px; --s16:16px; --s20:20px; --s24:24px;
       --tap:44px;
     }
 
     *{box-sizing:border-box}
     html,body{margin:0}
+
     body{
       font-family:"Montserrat", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
       color:var(--text);
       background: var(--bg);
-      padding: var(--s24) 14px calc(108px + env(safe-area-inset-bottom));
-      -webkit-text-size-adjust: 100%;
+      padding:22px 14px calc(108px + env(safe-area-inset-bottom));
+      -webkit-text-size-adjust:100%;
       text-rendering: optimizeLegibility;
     }
+
     a, button { -webkit-tap-highlight-color: transparent; }
 
     .wrap{max-width:640px;margin:0 auto}
@@ -75,26 +80,29 @@
       overflow:hidden;
     }
 
+    /* ✅ LOGO più grande */
     .logo-wrap{
       display:flex;
       justify-content:center;
-      padding: clamp(16px, 4vw, 24px) 16px;
+      padding: clamp(18px, 5vw, 34px) 16px;
       background:#fff;
     }
     .logo{
       display:block;
-      width: min(560px, 94vw);
+      width: min(620px, 96vw);
       height:auto;
-      max-height:110px;
+      max-height:150px;
       object-fit:contain;
     }
 
+    /* ✅ HERO più arioso + leggibile */
     .hero{
       position:relative;
-      padding: var(--s20) var(--s20) var(--s20);
+      padding: clamp(22px, 5vw, 34px) 20px;
       text-align:center;
       background: var(--ivory);
       overflow:hidden;
+      border-bottom: 1px solid rgba(44,28,20,.08);
     }
     .hero::before{
       content:"";
@@ -110,30 +118,31 @@
 
     h1{
       margin:0;
-      font-size: clamp(22px, 5.2vw, 30px);
-      letter-spacing:-.03em;
-      line-height:1.12;
+      font-size: clamp(24px, 5.6vw, 36px);
+      letter-spacing:-.04em;
+      line-height:1.08;
       font-weight:800;
       color: var(--brand);
     }
+
     .sub{
       margin:12px auto 0;
-      max-width:600px;
+      max-width:560px;
       color: var(--muted);
-      font-size:14px;
-      line-height:1.35;
-      font-weight:700;
+      font-size:15px;
+      line-height:1.45;
+      font-weight:650;
     }
     .sub strong{font-weight:900;color:var(--brand);}
 
-    /* Trust pills */
+    /* ✅ Pills più pulite */
     .pills{
-      margin: 12px auto 0;
+      margin: 14px auto 0;
       display:flex;
       gap:10px;
       justify-content:center;
       flex-wrap:wrap;
-      max-width: 600px;
+      max-width: 560px;
     }
     .pill{
       font-size:12px;
@@ -141,17 +150,17 @@
       letter-spacing:.02em;
       padding: 8px 12px;
       border-radius:999px;
-      background: rgba(255,255,255,.75);
+      background: rgba(255,255,255,.85);
       border:1px solid rgba(44,28,20,.10);
       color: rgba(44,28,20,.92);
       white-space:nowrap;
     }
 
     .actions{
-      padding: var(--s16) var(--s20) var(--s20);
+      padding:14px 18px 18px;
       display:grid;
       grid-template-columns:1fr;
-      gap: var(--s12);
+      gap:12px;
       background:#fff;
     }
     @media (min-width:420px){
@@ -165,7 +174,7 @@
       gap:10px;
       text-decoration:none;
       border-radius:18px;
-      padding:16px 14px;
+      padding:16px 16px;
       font-weight:900;
       border:1px solid rgba(44,28,20,.10);
       background:#fff;
@@ -212,7 +221,7 @@
     }
 
     .section{
-      padding: var(--s24) var(--s20);
+      padding:18px;
       background:#fff;
     }
     .section.alt{ background: var(--ivory); }
@@ -229,7 +238,7 @@
     .grid{
       display:grid;
       grid-template-columns:1fr;
-      gap: var(--s12);
+      gap:12px;
     }
     @media (min-width:560px){
       .grid{grid-template-columns:1fr 1fr}
@@ -252,14 +261,17 @@
       transform:translateY(-1px);
       border-color: rgba(44,28,20,.18);
     }
+
     .tile b{display:block; font-weight:900; color:var(--brand);}
     .small{color:rgba(78,74,69,.86);font-size:13px;margin-top:4px;line-height:1.45;font-weight:600}
+
     .tile a{color:inherit;text-decoration:none}
     .tile a:hover{text-decoration:underline}
+
     .tile.noicon{ gap:0; }
     .tile.noicon b{ margin:0; }
 
-    /* CTA inside tiles (tap-friendly) */
+    /* CTA tap-friendly dentro tile */
     .mini-actions{
       display:flex;
       gap:10px;
@@ -306,7 +318,7 @@
     .row span:last-child{color: rgba(78,74,69,.92); font-weight:900}
     .row.muted{opacity:.75}
 
-    /* Video: lazy load + overlay */
+    /* ✅ VIDEO: click-to-load (compatibile) + overlay */
     .video{
       margin:14px auto 0;
       max-width: 600px;
@@ -439,7 +451,6 @@
       .sticky .inner{grid-template-columns: 1fr 1fr 1fr;}
     }
 
-    /* Respect reduced motion */
     @media (prefers-reduced-motion: reduce){
       *{scroll-behavior:auto !important}
       .btn,.tile,.soc{transition:none}
@@ -459,18 +470,18 @@
       <div class="hero">
         <h1>Azienda Agricola Moretti</h1>
         <div class="sub">
-          <strong>Funghi km 0</strong> • Fresco • Linea gelo • Trasformati • Forniture B2B — Marino (RM) • Store Eataly Roma
+          <strong>Funghi km 0</strong> • Fresco • Linea gelo • Trasformati • Forniture B2B<br>
+          Marino (RM) • Store Eataly Roma
         </div>
 
+        <!-- ✅ Solo 2 pill (più premium) -->
         <div class="pills" aria-label="Punti di forza">
-          <div class="pill">Tracciabilità</div>
           <div class="pill">KM 0</div>
           <div class="pill">B2B &amp; Privati</div>
         </div>
       </div>
 
       <div class="actions" aria-label="Azioni principali">
-        <!-- Popolati via JS per evitare duplicazioni e garantire consistenza -->
         <a class="btn primary" id="waTop" href="#" aria-label="Scrivi su WhatsApp">
           <svg class="wa-fill" viewBox="0 0 24 24" aria-hidden="true">
             <path fill="currentColor" d="M12.04 2C6.57 2 2.13 6.44 2.13 11.91c0 1.73.45 3.42 1.3 4.9L2 22l5.33-1.4a9.86 9.86 0 0 0 4.71 1.2h.01c5.47 0 9.9-4.44 9.9-9.9C21.95 6.44 17.51 2 12.04 2zm5.76 14.3c-.24.68-1.4 1.3-1.92 1.38-.48.07-1.1.1-1.78-.11-.41-.13-.93-.3-1.6-.6-2.82-1.22-4.66-4.1-4.8-4.29-.13-.19-1.14-1.52-1.14-2.9 0-1.38.72-2.05.98-2.33.25-.28.56-.35.74-.35h.54c.17 0 .4-.03.62.47.24.58.81 2 .88 2.14.07.15.11.32.02.51-.08.19-.13.32-.26.49-.13.17-.27.38-.39.5-.13.13-.26.27-.11.52.15.25.68 1.12 1.46 1.81 1 .88 1.84 1.15 2.1 1.28.26.13.41.11.56-.06.15-.17.64-.74.81-1 .17-.26.34-.21.57-.13.24.08 1.5.71 1.75.84.26.13.43.19.49.3.06.11.06.64-.18 1.32z"/>
@@ -478,14 +489,14 @@
           Chiedi disponibilità
         </a>
 
-        <a class="btn" id="callTop" href="tel:+390688936064" aria-label="Chiama">
+        <a class="btn" href="tel:+390688936064" aria-label="Chiama">
           <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.8 19.8 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.8 12.8 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.8 12.8 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
           </svg>
           Chiama
         </a>
 
-        <a class="btn" id="navTop"
+        <a class="btn"
            href="https://www.google.com/maps/dir/?api=1&destination=Via+Paolo+Mercuri+23+00047+Marino+RM"
            target="_blank" rel="noopener noreferrer"
            aria-label="Naviga">
@@ -632,8 +643,17 @@
             </div>
           </button>
         </div>
+
         <div class="small" style="text-align:center;margin-top:10px;">
           Tocca per riprodurre (caricamento ottimizzato)
+        </div>
+
+        <!-- ✅ Fallback sempre funzionante -->
+        <div style="text-align:center;margin-top:10px;">
+          <a id="ytFallback" class="mini-btn" target="_blank" rel="noopener noreferrer"
+             href="https://www.youtube.com/watch?v=bsgln3b1mOc">
+            Guarda su YouTube
+          </a>
         </div>
       </div>
 
@@ -710,18 +730,18 @@
       youtubeId: 'bsgln3b1mOc'
     };
 
-    // basic validation for WA number (digits only, 8-15 chars)
+    // -------------------------
+    // WhatsApp (centralizzato + validation)
+    // -------------------------
     function sanitizeDigits(s){ return (s || '').replace(/\D/g, ''); }
     const waNum = sanitizeDigits(CFG.whatsappNumber);
     const waOk = /^[0-9]{8,15}$/.test(waNum);
 
     function waLink(message){
       const txt = encodeURIComponent(message || '');
-      // wa.me requires digits only
       return 'https://wa.me/' + waNum + '?text=' + txt;
     }
 
-    // Apply WhatsApp links (top + sticky)
     const waTop = document.getElementById('waTop');
     const waSticky = document.getElementById('waSticky');
 
@@ -734,9 +754,9 @@
       if(!waOk) waSticky.title = 'Numero WhatsApp non configurato';
     }
 
-    // =========================
-    // Instagram: deep link robusto + hardening username
-    // =========================
+    // -------------------------
+    // Instagram deep link robusto + hardening username
+    // -------------------------
     const igAnchor = document.querySelector('.ig-open');
     if(igAnchor){
       const rawUser = (igAnchor.getAttribute('data-ig') || CFG.instagramUser).trim();
@@ -748,17 +768,12 @@
       const isAndroid = /Android/i.test(ua);
       const isIOS = /iPhone|iPad|iPod/i.test(ua);
 
-      // ensure href is the web fallback
       igAnchor.href = web;
 
       igAnchor.addEventListener('click', function(e){
-        // Se stai già aprendo in nuova tab (target=_blank), lascia fare al browser
-        // ma qui vogliamo provare app first, quindi preveniamo.
         e.preventDefault();
-
         const fallback = () => { window.location.href = web; };
 
-        // iOS deep link
         if(isIOS){
           const ios = 'instagram://user?username=' + encodeURIComponent(user);
           const t = setTimeout(fallback, 900);
@@ -768,7 +783,6 @@
           return;
         }
 
-        // Android intent
         if(isAndroid){
           const intent = 'intent://www.instagram.com/' + encodeURIComponent(user) +
             '/#Intent;package=com.instagram.android;scheme=https;end';
@@ -783,9 +797,9 @@
       });
     }
 
-    // =========================
-    // vCard: più compatibile cross-device + fallback
-    // =========================
+    // -------------------------
+    // vCard download (cross-device)
+    // -------------------------
     const btn = document.getElementById('saveContact');
     if(btn){
       const vcard =
@@ -809,7 +823,6 @@ END:VCARD`;
         const ua = navigator.userAgent || '';
         const isIOS = /iPhone|iPad|iPod/i.test(ua);
 
-        // iOS: spesso import migliore con data URI (best-effort)
         if(isIOS){
           window.location.href = 'data:text/vcard;charset=utf-8,' + encodeURIComponent(vcard);
           return;
@@ -835,23 +848,35 @@ END:VCARD`;
       });
     }
 
-    // =========================
-    // Video lazy: carica iframe solo al click (performance migliore)
-    // =========================
+    // -------------------------
+    // ✅ VIDEO FIX: embed più compatibile + origin + fallback YouTube sempre
+    // -------------------------
     const loadBtn = document.getElementById('loadVideo');
+    const ytFallback = document.getElementById('ytFallback');
+
     if(loadBtn){
+      // Aggiorna fallback link sempre coerente
+      const watchUrl = 'https://www.youtube.com/watch?v=' + encodeURIComponent(CFG.youtubeId);
+      if(ytFallback) ytFallback.href = watchUrl;
+
       loadBtn.addEventListener('click', function(){
         const container = loadBtn.parentElement;
-        const yt = CFG.youtubeId;
+        const yt = (CFG.youtubeId || '').trim();
+
+        const origin = encodeURIComponent(window.location.origin);
+
+        // Embed standard (più compatibile su iOS/Android/desktop)
+        const embedUrl =
+          'https://www.youtube.com/embed/' + encodeURIComponent(yt) +
+          '?autoplay=1&rel=0&modestbranding=1&playsinline=1&origin=' + origin;
 
         const iframe = document.createElement('iframe');
-        // nocookie + modest branding style
-        iframe.src = 'https://www.youtube-nocookie.com/embed/' + encodeURIComponent(yt) +
-          '?autoplay=1&rel=0&modestbranding=1';
+        iframe.src = embedUrl;
         iframe.title = 'Azienda Agricola Moretti';
         iframe.allow = 'accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; web-share';
         iframe.allowFullscreen = true;
         iframe.loading = 'lazy';
+        iframe.referrerPolicy = 'origin-when-cross-origin';
 
         container.innerHTML = '';
         container.appendChild(iframe);
